<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.fitme.android.fitme.MemberApp.newClassFragment.NewClassFragment"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/title"
      android:layout_marginBottom="8dp"
      android:text="@string/class_info_name"
      android:textColor="@color/colorSecondaryDark"
      android:textStyle="bold"
      android:textAlignment="center"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/class_info_modality"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <Spinner
        android:id="@+id/classInfoModality"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/class_info_date"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/classInfoDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="datetime"
        android:focusable="false"
        android:maxLines="1"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/class_info_spots"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/classInfoSpots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:maxLines="1"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/class_info_hour_begin"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/classInfoBegin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:inputType="datetime"
        android:maxLines="1"
        android:focusable="false"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="40dp"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="152dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:text="@string/class_info_hour_end"
        android:textSize="18dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/classInfoEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="datetime"
        android:focusable="false"
        android:maxLines="1"
        />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
      android:layout_height="40dp"
    android:orientation="horizontal"
    >
  <TextView
      android:layout_width="152dp"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:layout_marginStart="16dp"
      android:text="@string/class_info_intensity"
      android:textSize="18dp"
      android:textStyle="bold"
      />

  <EditText
      android:id="@+id/classInfoIntensity"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:inputType="number"
      android:maxLines="1"
      />
</LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
      android:layout_height="40dp"
    android:orientation="horizontal"
    >
  <TextView
      android:layout_width="152dp"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:layout_marginStart="16dp"
      android:text="@string/class_info_weight_loss"
      android:textSize="18dp"
      android:textStyle="bold"
      />

  <EditText
      android:id="@+id/classInfoWeightLoss"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:inputType="number"
      android:maxLines="1"
      />
</LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
      android:layout_height="40dp"
    android:orientation="horizontal"
    >
  <TextView
      android:layout_width="152dp"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:layout_marginStart="16dp"
      android:text="@string/class_info_relaxation"
      android:textSize="18dp"
      android:textStyle="bold"
      />

  <EditText
      android:id="@+id/classInfoRelaxation"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:inputType="number"
      android:maxLines="1"
      />
</LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
      android:layout_height="40dp"
    android:orientation="horizontal"
    >
  <TextView
      android:layout_width="152dp"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:layout_marginStart="16dp"
      android:text="@string/class_info_description"
      android:textSize="18dp"
      android:textStyle="bold"
      />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
      <EditText
          android:id="@+id/classInfoDescription"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:inputType="textMultiLine"
          />
    </ScrollView>
  </LinearLayout>

  <Button
      android:id="@+id/btn_add_new_class"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="16dp"
      android:background="@color/colorSecondaryDark"
      android:text="@string/action_add_new_class"
      android:textColor="@android:color/white"
      android:textStyle="bold"
      style="?android:textAppearanceSmall"
      />

</LinearLayout>
