<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:background="@color/colorPrimaryLight"
    tools:context=".Register.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title"
        android:text="@string/register"
        android:textColor="@color/colorSecondaryDark"
        android:textStyle="bold"
        android:textAlignment="center"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name"
          android:inputType="textCapWords"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/dateBirth"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_date"
          android:focusable="false"
          android:inputType="date"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_phone"
          android:inputType="phone"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password"
          android:inputType="textVisiblePassword"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <EditText
          android:id="@+id/employeeNumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_employee_number"
          android:inputType="number"
          android:visibility="gone"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSecondaryDark"
        android:onClick="saveInfo"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        />

  </LinearLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_gravity="center_horizontal"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:text="Already have an account?"
        />
    <TextView
        android:id="@+id/signupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/sign_in"
        android:clickable="true"
        android:onClick="signIn"
        android:textColor="@color/colorSecondaryDark"
        />
  </LinearLayout>

</LinearLayout>
