<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.fitme.android.fitme.FirstScreen.FirstScreenActivity">

  <TextView
      android:layout_width="194dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="95dp"
      android:layout_marginTop="15dp"
      android:text="@string/welcome_message"
      android:textAlignment="center"
      android:textColor="@color/colorSecondaryDark"
      android:textSize="@dimen/title"
      android:textStyle="bold"
      />

    <LinearLayout
        android:paddingTop="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/athlete"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/action_athlete"
            android:background="@color/colorSecondaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            android:onClick="enterAthlete"/>

        <Button
            android:id="@+id/trainer"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_trainer"
            android:background="@color/colorSecondaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:onClick="enterTrainer"
            style="?android:textAppearanceSmall"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inical_phrase"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="@dimen/sub_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"/>

</LinearLayout>
