<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fitme.android.fitme.MemberApp.athletesListFragment.ListAthletesFragment"
    >

  <!-- TODO: Update blank fragment layout -->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/title"
      android:text="@string/list_athletes"
      android:textColor="@color/colorSecondaryDark"
      android:textStyle="bold"
      android:textAlignment="center"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:text="@string/maxAthletes"
        android:textSize="18dp"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/maxNumberAthletes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="18dp"
        android:textStyle="bold"
        />
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="8dp"
      >
    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:text="@string/numberAthletes"
        android:textSize="18dp"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/numberAthletes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hint_cell"
        android:textSize="18dp"
        android:textStyle="bold"
        />
  </LinearLayout>

  <ListView
      android:id="@+id/listAthletes"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:textAlignment="center"
      >
  </ListView>


</LinearLayout>
