<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.fitme.android.fitme.Login.LoginActivity"
    android:orientation="vertical">

  <TextView
      android:layout_width="194dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="95dp"
      android:layout_marginTop="15dp"
      android:text="@string/welcome_message"
      android:textAlignment="center"
      android:textColor="@color/colorSecondaryDark"
      android:textSize="@dimen/title"
      android:textStyle="bold"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        >

      <EditText
          android:id="@+id/email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email"
          android:inputType="textEmailAddress"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        >

      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:maxLines="1"
          />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorSecondaryDark"
        android:text="@string/action_login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="?android:textAppearanceSmall"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="2dp"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="No account yet?"
          />
      <TextView
          android:id="@+id/signupLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sign_up"
          android:clickable="true"
          android:onClick="register"
          android:textColor="@color/colorSecondaryDark"
          />
    </LinearLayout>
  </LinearLayout>



</LinearLayout>
