<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fitme.android.fitme.MemberApp.profileFragment.PerfilFragment"
    android:orientation="vertical"
    >

  <!-- TODO: Update blank fragment layout -->

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="130dp"
      android:layout_height="90dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="10dp"
      android:clickable="true"
      android:contentDescription="@string/app_name"
      android:src="@drawable/ic_photo_camera_black_24dp"
      android:tint="@color/colorPrimaryDark"
      app:layout_constraintBottom_toTopOf="@+id/namePerfil"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      />
  <TextView
      android:id="@+id/namePerfil"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="40dp"
      android:text="@string/name_perfil"
      android:textAlignment="center"
      android:textSize="36dp"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="28dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/save_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/cellNumberTextPerfil"
          android:layout_width="152dp"
          android:layout_height="match_parent"
          android:layout_marginStart="16dp"
          android:gravity="center_vertical"
          android:text="@string/hint_cell"
          android:textSize="22dp"
          android:textStyle="bold"
          />

      <EditText
          android:id="@+id/cellNumberPerfil"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginEnd="16dp"
          android:inputType="number"
          android:maxLines="1"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="152dp"
          android:layout_height="match_parent"
          android:layout_marginStart="16dp"
          android:gravity="center_vertical"
          android:text="@string/hint_date"
          android:textSize="22dp"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/datePerfil"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginEnd="20dp"
          android:gravity="center_vertical"
          android:textSize="18dp"
          />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/passwordtextPerfil"
          android:layout_width="152dp"
          android:layout_height="match_parent"
          android:layout_marginStart="16dp"
          android:gravity="center_vertical"
          android:text="@string/hint_password"
          android:textSize="22dp"
          android:textStyle="bold"
          />

      <EditText
          android:id="@+id/passwordPerfil"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginEnd="16dp"
          android:inputType="textPassword"
          android:maxLines="1"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEmployeeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        >
      <TextView
          android:layout_width="152dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:gravity="center_vertical"
          android:text="@string/hint_employee_number"
          android:textSize="22dp"
          android:textStyle="bold"
          />

      <TextView
          android:id="@+id/employeeNumberPerfil"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginEnd="20dp"
          android:gravity="center_vertical"
          android:textSize="18dp"
          />

    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/save_button"
      android:layout_width="120dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="42dp"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:background="@color/colorSecondary"
      android:text="@string/button_perfil"
      android:textColor="@color/colorWhite"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      />

</android.support.constraint.ConstraintLayout>